--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -266,7 +266,7 @@ ul hr {
     margin-right: 2.344vw;
 }
 
-.firstDish{
+.firstD1{
     position: absolute;
     left: 18.4375vw;
     top: 14.815vh;
@@ -341,7 +341,7 @@ ul hr {
     font-size: 2.1875vw;
 }
 
-.firstD:hover .rectangleFD, .firstDish:hover {
+.firstD:hover .rectangleFD, .firstD1:hover {
     border: 0.46vh solid #733506;
 }
 
