--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -105,14 +105,14 @@
     </div>
 
     <div class="firstD">
-        <img alt="firstD1" class="firstD1" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
+        <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
         <div class="rectangleFD rectangleFD-left">
             <img alt="substance" class="substance" th:src="@{images/Soup.svg}" src="../../static/images/Soup.svg" > First dishes
         </div>
     </div>
 
     <div class="mainD">
-        <img alt="mainD1" class="mainD1" th:src="@{images/mainD.jpg}" src="../../static/images/mainD.jpg">
+        <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/mainD.jpg">
         <div class="rectangleMD rectangleMD-left">
             <img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" > Main dishes
         </div>
