--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -118,18 +118,18 @@ body {
 
 /*____________________________________________________________________________________________________________________*/
 .footer {
-position: fixed;
-width: 100%;
-height: 5.6vh;
-top: 94.4vh;
-bottom: 0;
-background-color: #3E5902;
-color: #F2E3B3;
-padding: 1.4vh;
-display: flex;
-left: 0;
-justify-content: space-between;
-z-index: 5;
+    position: fixed;
+    width: 100%;
+    height: 5.6vh;
+    top: 94.4vh;
+    bottom: 0;
+    background-color: #3E5902;
+    color: #F2E3B3;
+    padding: 1.4vh;
+    display: flex;
+    left: 0;
+    justify-content: space-between;
+    z-index: 5;
 }
 
 
@@ -139,7 +139,7 @@ z-index: 5;
     width: 173px;
     height: 46px;
     background-color: #3E5902;
-    border-radius: 30px;
+    border-radius: 2.7vw;
     text-align: center;
     font-family: 'Frank Ruhl Libre';
     font-size: 1.25vh;
@@ -154,7 +154,7 @@ z-index: 5;
 #send-button:hover {
     background-color: #FBEFC7;
     color: #3E5902;
-    border: 5px solid #3E5902;
+    border: 0.46vh solid #3E5902;
 }
 
 #overlay {
@@ -200,7 +200,7 @@ z-index: 5;
     bottom: 0.6481vh;
     background-color: #F2E3B3;
     color: #733506;
-    border-radius: 30px;
+    border-radius: 2.7vw;
     padding: 0.19vw;
     width: 8.4375vw;
     height: 4.2593vh;
@@ -281,4 +281,30 @@ z-index: 5;
     line-height: 1vh;
     text-align: left;
     color: #F2E3B3;
+}
+
+
+.copyrightm {
+    position: absolute;
+    left: 240px;
+    bottom: -18px;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 42px;
+    font-weight: 600;
+    line-height: 31px;
+
+    color: #000000;
+}
+
+.copyrightf {
+    position: absolute;
+    left: 410px;
+    bottom: -18px;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 42px;
+    font-weight: 600;
+    line-height: 31px;
+    color: #000000;
 }
