--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>All recipes</title>
     <link rel="stylesheet" type="text/css" href="../../static/css/allRecipes.css" th:href="@{css/allRecipes.css}">
-    <script  src="../../static/js/scripts.js"></script>
 </head>
 <header>
     <div class="header">
@@ -37,8 +36,8 @@
 
         <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
         <a href = "main.html" th:href="@{images/home.svg}">
-    </div>
 
+    </div>
 </header>
 <body>
 
@@ -100,7 +99,7 @@
 </table>
 </body>
 <footer class="footer">
-    <button class="support-button" id="support-button"><span>Support</span></button>
+    <button class="support-button" id="support-btn"><span>Support</span></button>
 
     <div id="overlay" onclick="hideOverlay()"></div>
 
@@ -118,7 +117,8 @@
         <div
                 class="telegram"
                 onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
-                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')">
+                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
+        >
             <img id="telegram-img" src="../../static/images/telegram.svg" alt="telegram" class="telegram">
         </div>
     </div>
@@ -127,9 +127,11 @@
         <div
                 class="instagram"
                 onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
-                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')">
+                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
+        >
             <img id="instagram-img" src="../../static/images/inst.svg" alt="instagram" class="instagram">
         </div>
     </div>
 </footer>
+<script src="../../static/js/scripts.js"></script>
 </html>
