--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Recipe</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/recipe.css" th:href="@{css/recipe.css}">
 </head>
 <body>
-<p th:text="${recipe.getTitle()}"></p>
+<div class="header">
+    <img th:src="@{images/logo.svg}" src="../../static/images/logo.svg" alt = "logo" class = "logo">
+
+    <form class="search-form">
+        <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
+        <input name="query" placeholder="Search" type="search">
+    </form>
+    <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
+    <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
+    <div class="heart-container">
+        <div class="heart"
+             onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
+             onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')"
+        >
+            <img id="heart-img" src="../../static/images/heart.svg" alt="heart" class="heart">
+        </div>
+    </div>
+
+    <div class="user-container">
+        <div class="user"
+             onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
+             onmouseout="restoreImage('user-img', '../../static/images/user.svg')"
+        >
+            <img id="user-img" src="../../static/images/user.svg" alt="user" class="user">
+        </div>
+    </div>
+
+    <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home">
+</div>
+</header>
 <p th:text="${recipe.getDescription()}"></p>
 <a th:href="@{/allRecipes(category=${recipe.getCategory().getTitle()})}"
    th:text="${recipe.getCategory().getTitle()}"></a>
@@ -28,5 +58,51 @@
     <tr th:text="${comment.getUser().getId()}"></tr>
     <tr th:text="${comment.getText()}"></tr>
 </table>
+
+<div class="container">
+    <div class="left">
+        <div class="title">
+            <p th:text="${recipe.getTitle()}"></p>
+        </div>
+    </div>
+    <div class="right">
+        Right Container
+    </div>
+</div>
+
+<footer class="footer">
+    <button class="support-button" id="support-btn"><span>Support</span></button>
+
+    <div id="overlay" onclick="hideOverlay()"></div>
+
+    <div class="window" id="popup-window">
+        <div class="inner-window">
+            <input name="query" placeholder="Enter feedback" type="search">
+        </div>
+
+        <button id="send-button">Send</button>
+    </div>
+
+    <div class="copyright">© Company policy and privacy rules</div>
+
+    <div class="circle-container telegram-container">
+        <div class="telegram"
+             onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
+             onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
+        >
+            <img id="telegram-img" src="../../static/images/telegram.svg" alt="telegram" class="telegram">
+        </div>
+    </div>
+
+    <div class="circle-container instagram-container">
+        <div class="instagram"
+             onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
+             onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
+        >
+            <img id="instagram-img" src="../../static/images/inst.svg" alt="instagram" class="instagram">
+        </div>
+    </div>
+</footer>
+<script src="../../static/js/scripts.js"></script>
 </body>
 </html>
