--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -29,16 +29,18 @@ body {
     border-radius: 30px;
 }
 
-.search-form input {
+.search-form input, .inner-window input {
     height: 6.19vh;
     width: 41.67vw;
+    margin-left: 1vw;
+    margin-top: 0.2vh;
     flex: 1;
     border: none;
     background: #FBEFC7;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.5vh;
     font-size: 2.5vw;
-    border-radius: 30px;
+    border-radius: 5.5vh;
     outline: none;
 }
 
@@ -135,9 +137,9 @@ body {
 
 #send-button {
     position: absolute;
-    right: 90px;
-    width: 173px;
-    height: 46px;
+    right: 4.6875vw;
+    width: 9.0105vw;
+    height: 4.2593vh;
     background-color: #3E5902;
     border-radius: 2.7vw;
     text-align: center;
@@ -146,8 +148,8 @@ body {
     font-size: 1.25vw;
     color: #FBEFC7;
     border: none;
-    top: 400px;
-    bottom: 16px;
+    top: 37.04vh;
+    bottom: 1.4815vh;
     z-index: 15;
 }
 
@@ -178,7 +180,7 @@ body {
     background: #F2E3B3;
     padding: 0.02vw;
     z-index: 11;
-    border-radius: 60px;
+    border-radius: 5.5vh;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -190,7 +192,7 @@ body {
     left: 2.1354167vw;
     top: 3.5185vh;
     padding-left: 0.01vw;
-    border-radius: 30px;
+    border-radius: 2.25vh;
     z-index: 13;
 }
 
@@ -224,7 +226,7 @@ body {
 
 .support-button:hover {
     background-color: transparent;
-    border: 5px solid #F2E3B3;
+    border: 0.4vh solid #F2E3B3;
     color: #F2E3B3;
 }
 
