--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -85,7 +85,7 @@ body {
     height: 5.55555555vh;
     width: 3.125vw;
 }
-
+/*____________________________________________________________________________________________________________________*/
 .container {
     display: flex;
     justify-content: space-between;
@@ -154,7 +154,7 @@ ul hr {
     margin-right: 0.6vw;
 }
 
-
+/*____________________________________________________________________________________________________________________*/
 ::-webkit-scrollbar {
     width: 0.78125vw;
     margin-left: 5vw;
@@ -235,7 +235,7 @@ ul hr {
     left: 6.3vw;
     top: 69vh;
 }
-
+/*____________________________________________________________________________________________________________________*/
 
 .cheesecake {
     position: absolute;
@@ -367,7 +367,7 @@ ul hr {
     border: 0.46vh solid #733506;
 }
 
-
+/*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
     width: 100%;
