--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -35,7 +35,7 @@
         </div>
 
         <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
-        <a href = "main.html" th:href="@{images/home.svg}">
+        <a href = "main.html" th:href="@{images/home.svg}"></a>
 
     </div>
 </header>
@@ -43,43 +43,46 @@
 
 <main>
     <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
-<!--    <div class="ul">-->
-<!--        <ul>-->
-<!--            <h1 class="h1">Categories</h1>-->
-<!--            <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >-->
-<!--                First dishes</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >-->
-<!--                Main dishes</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >-->
-<!--                Salads</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >-->
-<!--                Pastry</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >-->
-<!--                Desserts</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >-->
-<!--                Drinks</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >-->
-<!--                Snacks</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >-->
-<!--                Fish dishes</li>-->
-<!--            <hr>-->
-<!--            <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >-->
-<!--                Sauces</li>-->
-<!--            <hr>-->
-<!--        </ul>-->
-<!--    </div>-->
+    <div class="ul">
+        <ul>
+            <h1 class="h1">Filters</h1>
+            <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >
+                First dishes</li>
+            <hr>
+            <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
+                Main dishes</li>
+            <hr>
+            <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
+                Salads</li>
+            <hr>
+            <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >
+                Pastry</li>
+            <hr>
+            <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
+                Desserts</li>
+            <hr>
+            <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >
+                Drinks</li>
+            <hr>
+            <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
+                Snacks</li>
+            <hr>
+            <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
+                Fish dishes</li>
+            <hr>
+            <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >
+                Sauces</li>
+            <hr>
+        </ul>
+    </div>
     <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
     <div class="mainField">
         <div class="field ">
+            <div class="ol">
+                <ol>
 
-            <p>Це ваше поле. Додайте сюди вміст.</p>
+                </ol>
+            </div>
         </div>
     </div>
 </main>
