--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -46,33 +46,23 @@
     <div class="ul">
         <ul>
             <h1 class="h1">Filters</h1>
-            <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >
-                First dishes</li>
+            <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
+                Categories</li>
             <hr>
-            <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
-                Main dishes</li>
+            <li><img alt="timeI" class="timeI" th:src="@{images/Time.svg}" src="../../static/images/Time.svg" >
+                Time</li>
             <hr>
-            <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
-                Salads</li>
+            <li><img alt="alphabetI" class="alphabetI" th:src="@{images/Alphabet.svg}" src="../../static/images/Alphabet.svg" >
+                Alphabet</li>
             <hr>
-            <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >
-                Pastry</li>
+            <li><img alt="ratingI" class="ratingI" th:src="@{images/Rating.svg}" src="../../static/images/Rating.svg" >
+                Rating</li>
             <hr>
-            <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
-                Desserts</li>
+            <li><img alt="dessertI" class="dessertI" th:src="@{images/ingridients.svg}" src="../../static/images/ingridients.svg" >
+                Ingredients</li>
             <hr>
-            <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >
-                Drinks</li>
-            <hr>
-            <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
-                Snacks</li>
-            <hr>
-            <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
-                Fish dishes</li>
-            <hr>
-            <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >
-                Sauces</li>
-            <hr>
+            <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
+                Devices</li>
         </ul>
     </div>
     <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
