--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -58,10 +58,10 @@
             <li><img alt="ratingI" class="ratingI" th:src="@{images/Rating.svg}" src="../../static/images/Rating.svg" >
                 Rating</li>
             <hr>
-            <li><img alt="dessertI" class="dessertI" th:src="@{images/ingridients.svg}" src="../../static/images/ingridients.svg" >
+            <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
                 Ingredients</li>
             <hr>
-            <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
+            <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
                 Devices</li>
         </ul>
     </div>
