started recipe page creation

--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -62,7 +62,7 @@
 <div class="container">
     <div class="left">
         <div class="title">
-            <p th:text="${recipe.getTitle()}"></p>
+            <p class="recipe-title" th:text="${recipe.title}">Default Recipe Title</p>
         </div>
     </div>
     <div class="right">
