--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -251,27 +251,37 @@ body {
     padding: 20px;
 }
 
+.right {
+     width: 45%;
+     background: #D3E4CD;
+     border-radius: 10px;
+     padding: 10px;
+     text-align: center;
+ }
+
 .left {
     display: flex;
     align-items: center;
     justify-content: center;
     background: #FBEFC7;
-    border-radius: 10px;
-}
-
-.right {
-    width: 45%;
-    background: #D3E4CD;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: center;
+    border-radius: 60px;
 }
 
 .title {
-    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif; /* Використовуйте додаткове визначення типу шрифту */
+    font-size: 48px;  /* Вказуємо розмір шрифту */
+    font-weight: 400; /* Вказуємо вагу шрифту */
+}
+
+.title-container  {
+    position: relative; /* Зміна на relative для контейнера, щоб працював Flexbox */
     width: 820px;
     height: 60px;
-    left: 78px;
-    border-radius: 30px;
+    border-radius: 60px;
     background: #FBEFC7;
+    display: flex;  /* Включаємо Flexbox */
+    justify-content: center; /* Центрування по горизонталі */
+    align-items: center;
 }
+
+
