--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -111,13 +111,13 @@ body {
     position: absolute;
     margin-left: 3.4vw;
     bottom: 0.2605vh;
-    margin-bottom: 40vh;
+    margin-bottom: 56vh;
 }
 
-.ul {
+.ulBoard {
     position: absolute;
-    top: 28vh;
-    height: 44vh;
+    top: 30vh;
+    height: 45vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
     font-size: 2.963vh;
@@ -140,6 +140,7 @@ ul li {
     padding-left: 0.2605vw;
     margin-left: 0.4vw;
     margin-right: 0.7vw;
+    margin-top: 0.5vh;
 }
 
 ul li:hover {
@@ -226,6 +227,41 @@ ul hr {
     top: 82vh;
 }
 /*____________________________________________________________________________________________________________________*/
+.apply-button {
+    position: absolute;
+    left: 4.6875vw;
+    bottom: 22vh;
+    background-color: #733506;
+    color: #F2E3B3;
+    border-radius: 2.7vw;
+    padding: 0.19vw;
+    width: 8.4375vw;
+    height: 4.2593vh;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25vh;
+    font-size: 1.25vw;
+    font-weight: 400;
+    line-height: 4.2593vh;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
+.apply-button span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.apply-button:hover {
+    background-color: transparent;
+    border: 0.5vh solid #733506;
+    color: #733506;
+}
+
+/*____________________________________________________________________________________________________________________*/
 .field {
     position: absolute;
     width: 80vw;
@@ -237,6 +273,46 @@ ul hr {
     background-color: #F2E3B3;
 }
 
+.ol{
+    position: absolute;
+    width: 80vw;
+    height: 76vh;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.66667vw;
+    font-size: 2.963vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-left: 0.2605vw;
+    margin-top: 1vh;
+
+}
+.ol ol {
+    list-style-type: none;
+}
+
+.smallerField{
+    position: absolute;
+    width: 74vw;
+    height: 14vh;
+    right: 4vw;
+    top: 4vh;
+    bottom: 8vh;
+    border-radius: 5.5vh;
+    background-color: #FBEFC7;
+}
+.smallerField-down1{
+    top: 22vh;
+}
+.smallerField-down2{
+    top: 40vh;
+}
+.smallerField-down3{
+    top: 58vh;
+}
+.smallerField-down4{
+    top: 76vh;
+    bottom: 4vh;
+}
 /*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
@@ -345,7 +421,7 @@ ul hr {
 
 .support-button:hover {
     background-color: transparent;
-    border: 0.4vh solid #F2E3B3;
+    border: 0.5vh solid #F2E3B3;
     color: #F2E3B3;
 }
 
