Only the board remains

--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -111,13 +111,14 @@ body {
     position: absolute;
     margin-left: 3.4vw;
     bottom: 0.2605vh;
-    margin-bottom: 56vh;
+    margin-bottom: 34vh;
+    padding-bottom: 1vh;
 }
 
 .ulBoard {
     position: absolute;
     top: 30vh;
-    height: 45vh;
+    height: 39vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
     font-size: 2.963vh;
@@ -139,7 +140,7 @@ ul li {
     list-style: none;
     padding-left: 0.2605vw;
     margin-left: 0.4vw;
-    margin-right: 0.7vw;
+    margin-right: 1.8vw;
     margin-top: 0.5vh;
 }
 
@@ -147,7 +148,7 @@ ul li:hover {
     background-color: #F2B705;
     border-radius: 5.5vw;
     height: 5vh;
-    width: 9.3vw;
+    width: 8.7vw;
 } /*hover for menu list elements*/
 
 ul hr {
@@ -158,12 +159,12 @@ ul hr {
 }
 
 /*____________________________________________________________________________________________________________________*/
-::-webkit-scrollbar {
+.ulBoard::-webkit-scrollbar {
     width: 0.78125vw;
     margin-left: 5vw;
 }
 
-::-webkit-scrollbar-track {
+.ulBoard::-webkit-scrollbar-track {
     margin-top: 2.7778vh;
     border: 0.0520834vw solid black;
     border-radius: 50px;
@@ -171,7 +172,7 @@ ul hr {
     margin-left: 0.5vw;
 }
 
-::-webkit-scrollbar-thumb {
+.ulBoard::-webkit-scrollbar-thumb {
     background: #733506;
     border-radius: 50px;
 }
@@ -284,10 +285,53 @@ ul hr {
     overflow-x: hidden;
     padding-left: 0.2605vw;
     margin-top: 1vh;
-
+    overflow: auto;
 }
 .ol ol {
     list-style-type: none;
+}
+
+.ol::-webkit-scrollbar {
+    width: 0.78125vw;
+    margin-right: 5vw;
+}
+
+.ol::-webkit-scrollbar-track {
+    margin-top: 2.7778vh;
+    border: 0.0520834vw solid black;
+    border-radius: 50px;
+    background: #F2E3B3;
+    margin-left: 0.5vw;
+}
+
+.ol::-webkit-scrollbar-thumb {
+    background: #733506;
+    border-radius: 50px;
+}
+
+.ol-scrollbar{
+    position: absolute;
+    right: 5vw;}
+
+.h2{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.4vw; /*42*/
+    font-size: 3.8889vh;
+    color: #733506;
+    left: 1.6vw;
+    margin-bottom: 0.5vh;
+    margin-top: 2vh;
+}
+
+.h2-down{
+    margin-right: 1.6vw;
+    margin-top: 7.5vh;
+}
+
+.h2-down-right{
+    margin-top: 0vh;
+    margin-left: 1.6vw;
 }
 
 .smallerField{
