--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -23,7 +23,7 @@
         <div class="heart"
                 onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
                 onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')">
-            <img id="heart-img" src="../../static/images/heart.svg" alt="heart" class="heart">
+            <img id="heart-img" th:src="@{images/heart.svg}" src="../../static/images/heart.svg" alt="heart" class="heart">
         </div>
     </div>
 
@@ -32,7 +32,7 @@
                 onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
                 onmouseout="restoreImage('user-img', '../../static/images/user.svg')">
 
-            <img id="user-img" src="../../static/images/user.svg" alt="user" class="user">
+            <img id="user-img" th:src="@{images/user.svg}" src="../../static/images/user.svg" alt="user" class="user">
         </div>
     </div>
 
@@ -142,7 +142,7 @@
                 onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
                 onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
         >
-            <img id="telegram-img" src="../../static/images/telegram.svg" alt="telegram" class="telegram">
+            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../static/images/telegram.svg" alt="telegram" class="telegram">
         </div>
     </div>
 
@@ -152,7 +152,7 @@
                 onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
                 onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
         >
-            <img id="instagram-img" src="../../static/images/inst.svg" alt="instagram" class="instagram">
+            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../static/images/inst.svg" alt="instagram" class="instagram">
         </div>
     </div>
 </footer>
