--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -144,7 +144,7 @@ ul li:hover {
     background-color: #F2B705;
     border-radius: 5.5vw;
     height: 5vh;
-    width: 9.3vw;
+    width: 10.1vw;
 } /*hover for menu list elements*/
 
 ul hr {
@@ -235,6 +235,12 @@ ul hr {
     left: 6.3vw;
     top: 69vh;
 }
+
+a:link {
+    text-decoration: none;
+    color: inherit;
+}
+
 /*____________________________________________________________________________________________________________________*/
 
 .cheesecake {
