Only the board remains

--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -48,7 +48,9 @@
         <ul>
             <h1 class="h1">Filters</h1>
             <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
-                Categories</li>
+                Categories
+                <img alt="DropDownIcon.svg" class="DropDownIcon.svg" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
+            </li>
             <hr>
             <li><img alt="timeI" class="timeI" th:src="@{images/Time.svg}" src="../../static/images/Time.svg" >
                 Time</li>
