--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Recipe</title>
 </head>
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="UTF-8">
+    <title>All recipes</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/recipe.css" th:href="@{css/recipe.css}">
+</head>
+<header>
+    <div class="header">
+        <img th:src="@{images/logo1.svg}" src="../../static/images/logo1.svg" alt = "logo1" class = "logo1">
+
+        <form class="search-form">
+            <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
+            <input name="query" placeholder="Search" type="search">
+        </form>
+        <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
+        <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
+        <a class="home" href="main.html" th:href="@{/}" > </a>
+        <div class="heart-container">
+            <div class="heart"
+                 onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
+                 onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')">
+                <img id="heart-img" th:src="@{images/heart.svg}" src="../../static/images/heart.svg" alt="heart" class="heart">
+            </div>
+        </div>
+
+        <div class="user-container">
+            <div class="user"
+                 onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
+                 onmouseout="restoreImage('user-img', '../../static/images/user.svg')">
+
+                <img id="user-img" th:src="@{images/user.svg}" src="../../static/images/user.svg" alt="user" class="user">
+            </div>
+        </div>
+
+        <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
+        <a href = "main.html" th:href="@{images/home.svg}"></a>
+
+    </div>
+</header>
 <body>
+<main>
+    <img alt="recipeIcon" class="recipeIcon" th:src="@{images/Recipe.svg}" src="../../static/images/Recipe.svg" >
+    <div class = "RecipeTitle">
+        <p class="c3">Pancakes</p>
+    </div>
+
+</main>
+
+
+
 <p th:text="${recipe.getTitle()}"></p>
 <p th:text="${recipe.getDescription()}"></p>
 <a th:href="@{/allRecipes(category=${recipe.getCategory().getTitle()})}"
@@ -29,4 +78,40 @@
     <tr th:text="${comment.getText()}"></tr>
 </table>
 </body>
+<footer class="footer">
+    <button class="support-button" id="support-btn"><span>Support</span></button>
+
+    <div id="overlay" onclick="hideOverlay()"></div>
+
+    <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
+        <div class="inner-window">
+            <input name="query" placeholder="Enter feedback" type="search">
+        </div>
+
+        <button id="send-button">Send</button>
+    </div>
+
+    <div class="copyright">© Company policy and privacy rules</div>
+
+    <div class="circle-container telegram-container">
+        <div
+                class="telegram"
+                onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
+                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
+        >
+            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../static/images/telegram.svg" alt="telegram" class="telegram">
+        </div>
+    </div>
+
+    <div class="circle-container instagram-container">
+        <div
+                class="instagram"
+                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
+                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
+        >
+            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../static/images/inst.svg" alt="instagram" class="instagram">
+        </div>
+    </div>
+</footer>
+<script th:href="@{js/scripts.js}" src="../../static/js/scripts.js"></script>
 </html>
