--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -91,17 +91,17 @@ body {
     width: 3.125vw;
     height: 5.556vh;
     margin-top: 4vh;
-    margin-left: 1vw;
+    margin-left: 0.5vw;
 }
 .RecipeTitle{
     position: absolute;
     width: 42.7vw;
     height: 5.556vh;
     margin-top: 4vh;
-    margin-left: 5vw;
-    top: 11vh;
+    margin-left: 4vw;
+    top: 11.1vh;
     border-radius: 5.5vh;
-    background-color: #FBEFC7;
+    background-color: #F2E3B3;
 }
 
 .c3{
@@ -114,6 +114,101 @@ body {
     margin-bottom: 0.5vh;
     margin-top: 0.1vh;
 }
+
+.RecipeRating{
+    position: absolute;
+    width: 6.5vw;
+    height: 5vh;
+    margin-left: 48.4834vw;
+    top: 14.6vh;
+    border: 0.7vh solid #F2E3B3;
+    border-radius: 5vh;
+}
+
+.num{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.5vw; /*48*/
+    font-size: 4.445vh;
+    color: black;
+    left: 1.6vw;
+    margin-left: 0.2vw;
+    margin-bottom: 0.5vh;
+    margin-top: 0.1vh;
+}
+
+.FavoriteList{
+    position: absolute;
+    width: 14.9vw;
+    height: 5.556vh;
+    margin-left: 57.5834vw;
+    top: 15.1vh;
+    background-color:  #F28705;
+    border-radius: 5vh;
+}
+
+.c4{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.75vw; /*48*/
+    font-size: 3.5vh;
+    color: black;
+    left: 2.7vw;
+    margin-left: 0.2vw;
+    margin-bottom: 0.3vh;
+    margin-top: 0.8vh;
+}
+
+.UserList{
+    position: absolute;
+    width: 14.9vw;
+    height: 5.556vh;
+    margin-left: 74.5834vw;
+    top: 15.1vh;
+    background-color:  #F28705;
+    border-radius: 5vh;
+}
+.c5{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.75vw; /*48*/
+    font-size: 3.5vh;
+    color: black;
+    left: 2.7vw;
+    margin-left: 1.5vw;
+    margin-bottom: 0.3vh;
+    margin-top: 0.8vh;
+}
+/*2.0834*/
+.Report{
+    position: absolute;
+    width: 6.5vw;
+    height: 5.556vh;
+    margin-left: 91.4834vw;
+    top: 15.1vh;
+    background-color:  #F28705;
+    border-radius: 5vh;
+}
+.c6{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.75vw; /*48*/
+    font-size: 3.5vh;
+    color: black;
+
+    margin-left: 0.9vw;
+    margin-bottom: 0.3vh;
+    margin-top: 0.8vh;
+}
+.stick{
+    position: absolute;
+    width: 100vw;
+    height: 1vh;
+    background-color:  black;
+    top: 20.65vh;
+}
+
+
 /*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
