--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -49,6 +49,20 @@
     <div class = "RecipeTitle">
         <p class="c3">Pancakes</p>
     </div>
+    <div class = "RecipeRating">
+        <p class = "num">8.8</p>
+    </div>
+    <div class = "FavoriteList">
+        <p class = "c4">Favorite list</p>
+    </div>
+    <div class = "UserList">
+        <p class = "c5">User list</p>
+    </div>
+    <div class = "Report">
+        <p class = "c6">Report</p>
+    </div>
+    <div class = "stick"></div>
+
 
 </main>
 
