--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -23,10 +23,10 @@ body {
 .search-form {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.53vw;
     padding-left: 1.0415vw;
     background: #FBEFC7;
-    border-radius: 30px;
+    border-radius: 2.778vh;
 }
 
 .search-form input, .inner-window input {
@@ -40,7 +40,7 @@ body {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.5vh;
     font-size: 2.5vw;
-    border-radius: 5.5vh;
+    border-radius: 2.5vh;
     outline: none;
 }
 
@@ -200,16 +200,147 @@ body {
     margin-bottom: 0.3vh;
     margin-top: 0.8vh;
 }
+
+.mini{
+    position: absolute;
+    width: 10vw;
+    height: 5.556vh;
+    margin-top: 0.5vh;
+    margin-left: 4vw;
+}
+
+.miniTime{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1vw; /*48*/
+    font-size: 3vh;
+    color: black;
+    margin-left: 1.7vw;
+    margin-bottom: 0.3vh;
+    margin-top: 0.3vh;
+}
+.dessertI{
+    position: absolute;
+    width: 6vw;
+    height: 4vh;
+    margin-left: 8vw;
+    margin-top: 0.2vh;
+}
+
+.miniCategories{
+    margin-left: 13.5vw;
+}
+
+/*____________________________________________________________________________________________________________________*/
+.IngredientTagsField{
+    position: absolute;
+    width: 46.875vw;
+    height: 11.1vh;
+    top: 26.5vh;
+    left: 2.0834vw;
+    background-color:  #F2E3B3;
+    border-radius: 5vh;
+}
+.IngredientTagsTitle{
+    position: absolute;
+    width: 11.98vw;
+    height: 4.82vh;
+    border-radius: 5vh;
+    background-color: #3E5902;
+    color: #F2E3B3;
+}
+
+.c7{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1vw; /*48*/
+    font-size: 3vh;
+    margin-top: 0.8vh;
+    margin-left: 1.5vw;
+}
+
+.content{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1vw; /*48*/
+    font-size: 3vh;
+    margin-top: 0.8vh;
+    margin-left: 13vw;
+    color: black;
+}
+
+.DeviceTagsField{
+    margin-top: 13.2vh;
+}
+.devices{
+    margin-left: 2.1vw;
+}
+/*____________________________________________________________________________________________________________________*/
+.text-form {
+    position: absolute;
+    align-items: center;
+    gap: 0.53vw;
+    padding-left: 1.0415vw;
+    background: #F2E3B3;
+    border-radius: 2.778vh;
+    left: 2.0834vw;
+    top: 26.6vw;
+}
+
+.text-form input, .inner-window input {
+    width: 43vw;
+    height: 5.556vh;
+    left: 2.0834vw;
+    margin-top: 0.2vh;
+    flex: 1;
+    border: none;
+    background: #F2E3B3;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.25vh;
+    font-size: 2.25vw;
+    border-radius: 2.5vh;
+    outline: none;
+}
+
+.quill{
+    height: 4.445vh;
+    width: 2.5vw;
+}
+
+.publish{
+    position: absolute;
+    width: 6.5vw;
+    height: 5.556vh;
+    margin-left: 39.2vw;
+    top: 0vh;
+    background-color:  #F28705;
+    border-radius: 5vh;
+}
+
+.c8{
+    display: flex;
+    align-items: center;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.5625vw; /*48*/
+    font-size: 2.778vh;
+    margin-top: 1.1vh;
+    margin-left: 1.2vw;
+    flex: 1;
+    border: none;
+    border-radius: 5.5vh;
+    outline: none;
+}
+
+/*____________________________________________________________________________________________________________________*/
 .stick{
     position: absolute;
     width: 100vw;
-    height: 1vh;
+    height: 2vh;
     background-color:  black;
-    top: 20.65vh;
+    top: 50.75vh;
+
 }
 
-
-/*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
     width: 100%;
