--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -62,8 +62,31 @@
         <p class = "c6">Report</p>
     </div>
     <div class = "stick"></div>
+    <div class="mini">
+        <p class="miniTime"> 30 minutes</p>
+            <img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
+        <p class="miniTime miniCategories"> Desserts </p>
+    </div>
 
-
+    <div class="IngredientTagsField">
+        <p class="content"> #flour #baking_powder #sugar #milk #butter #eggs</p>
+        <div class="IngredientTagsTitle">
+            <p class = "c7">Ingredient tags</p>
+        </div>
+    </div>
+    <div class="IngredientTagsField DeviceTagsField ">
+        <p class="content"> #flour #baking_powder #sugar #milk #butter #eggs</p>
+        <div class="IngredientTagsTitle">
+            <p class = "c7 devices">Devices tags</p>
+        </div>
+    </div>
+    <form class="text-form">
+        <img th:src="@{images/quill.svg}" src="../../static/images/quill.svg" alt = "quill" class = "quill">
+        <input name="query" placeholder="Add comment" type="text">
+        <div class="publish">
+            <p class = "c8">Publish</p>
+        </div>
+    </form>
 </main>
 
 
