--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -14,7 +14,8 @@ body {
     padding-right: 2.083vw;
     padding-left: 4.166vw;
 }
-.logo1 {
+
+.logo {
     width: 6.25vw;
     height: 10vh;
     top: 0.3vw;
@@ -29,7 +30,7 @@ body {
     border-radius: 2.7vw;
 }
 
-.search-form input, .inner-window input {
+.search-form input, .inner-window input{
     height: 6.19vh;
     width: 41.67vw;
     margin-left: 1vw;
@@ -40,6 +41,28 @@ body {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.5vh;
     font-size: 2.5vw;
+    border-radius: 5.5vh;
+    outline: none;
+}
+
+.login-heading {
+    position: absolute;
+    right: 9.58vw;
+    bottom: 18.5vh;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 2vh;
+    font-size: 2vw;
+}
+
+.email input, .password input {
+    width: 21.979vw;
+    height: 6.19vh;
+    flex: 1;
+    border: none;
+    background: #FBEFC7;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vh;
+    font-size: 2vw;
     border-radius: 5.5vh;
     outline: none;
 }
@@ -74,6 +97,10 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    cursor: pointer;
+    pointer-events: auto;
+    border: none;
+    background-color: #F2E3B3;
 }
 
 .user-container:hover, .heart-container:hover {
@@ -81,6 +108,7 @@ body {
     width: 4.6vw;
     height: 9.2593vh;
 }
+
 .home{
     height: 5.55555555vh;
     width: 3.125vw;
@@ -144,8 +172,8 @@ ul li:hover {
     background-color: #F2B705;
     border-radius: 5.5vw;
     height: 5vh;
-    width: 10.1vw;
-} /*hover for menu list elements*/
+    width: 9.3vw;
+}
 
 ul hr {
     border: 0.104167vw solid black;
@@ -153,7 +181,6 @@ ul hr {
     margin-left: 0.5vw;
     margin-right: 0.6vw;
 }
-
 /*____________________________________________________________________________________________________________________*/
 ::-webkit-scrollbar {
     width: 0.78125vw;
@@ -172,6 +199,7 @@ ul hr {
     background: #733506;
     border-radius: 50px;
 }
+
 .board{
     width: 14.584vw; /*280*/
     height:75.926vh; /*820*/
@@ -199,6 +227,7 @@ ul hr {
     width: 2.0833vw;
     height:4.167vh;
 }
+
 .pastryI{
     width: 2.34375vw;
     height: 3.24075vh;
@@ -213,6 +242,7 @@ ul hr {
     width: 2.34375vw;
     height: 4.1667vh;
 }
+
 .snackI{
     width: 2.34375vw;/*45*/
     height: 2.7778vh;/*30*/
@@ -389,7 +419,6 @@ a:link {
     z-index: 5;
 }
 
-
 #send-button {
     position: absolute;
     right: 4.6875vw;
@@ -406,6 +435,25 @@ a:link {
     top: 37.04vh;
     bottom: 1.4815vh;
     z-index: 15;
+    cursor: pointer;
+}
+
+#confirm-button {
+    background-color: #3E5902;
+    position: absolute;
+    width: 15.6vw;
+    height: 5vh;
+    right: 5.2vw;
+    bottom: 1.85vh;
+    z-index: 15;
+    border-radius: 2.7vw;
+    cursor: pointer;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 2vh;
+    font-size: 2vw;
+    color: #FBEFC7;
+    border: none;
 }
 
 #send-button:hover {
@@ -414,7 +462,7 @@ a:link {
     border: 0.5vh solid #3E5902;
 }
 
-#overlay {
+#overlay-support, #overlay-user {
     position: fixed;
     display: none;
     width: 100%;
@@ -437,6 +485,37 @@ a:link {
     z-index: 11;
     border-radius: 5.5vh;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.login-window {
+    position: fixed;
+    display: none;
+    border-radius: 2.7vw;
+    width: 26vw;
+    height: 27.3vh;
+    left: 72.9vw;
+    bottom: 59.7vh;
+    background-color: #F2E3B3;
+    z-index: 11;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.login-form {
+    background: #FBEFC7;
+    border-radius: 2.7vw;
+    position: absolute;
+    width: 21.9vw;
+    height: 5vh;
+    z-index: 13;
+    left: 2.1vw;
+}
+
+.email {
+    top: 6.48vh;
+}
+
+.password {
+    top: 13.4vh;
 }
 
 .inner-window {
@@ -526,6 +605,7 @@ a:link {
 .telegram-container:hover, .instagram-container:hover {
     background-color: #733506;
 }
+
 .copyright {
     position: static;
     width: 21vw;
@@ -538,30 +618,4 @@ a:link {
     line-height: 1vh;
     text-align: left;
     color: #F2E3B3;
-}
-
-
-.copyrightm {
-    position: absolute;
-    left: 240px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
-
-    color: #000000;
-}
-
-.copyrightf {
-    position: absolute;
-    left: 410px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
-    color: #000000;
 }
