--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <title>All recipes</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/recipe.css" th:href="@{css/recipe.css}">
+    <link rel="stylesheet" type="text/css"  th:href="@{css/recipe.css}" href="../../static/css/recipe.css">
 </head>
 <header>
     <div class="header">
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="IngredientTagsField DeviceTagsField ">
-        <p class="content"> #flour #baking_powder #sugar #milk #butter #eggs</p>
+        <p class="content">#electric_mixer</p>
         <div class="IngredientTagsTitle">
             <p class = "c7 devices">Devices tags</p>
         </div>
@@ -87,6 +87,10 @@
             <p class = "c8">Publish</p>
         </div>
     </form>
+    <div class = "commentField">
+    <div class = "comment"></div>
+    </div>
+    <div class = "stick stick2"></div>
 </main>
 
 
