--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -88,9 +88,32 @@
         </div>
     </form>
     <div class = "commentField">
-    <div class = "comment"></div>
+    <div class = "comment">
+        <div class = "commentIcon">
+        </div>
+    </div>
+        <div class = " comment comment2">
+            <div class = "commentIcon">
+            </div>
+        </div>
+        <div class = "comment comment3">
+            <div class = "commentIcon">
+            </div>
+        </div>
     </div>
     <div class = "stick stick2"></div>
+
+    <div class="fullRecipe">
+        <div class="fullRecipeHeader">
+            <p class="frTitle">Recipe</p>
+        </div>
+        <div class="amountField">
+            <p class="ingredientsTitle">Ingredient amount</p>
+        </div>
+        <div class="stepByStepField">
+        </div>
+    </div>
+
 </main>
 
 
