--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -108,12 +108,23 @@
             <p class="frTitle">Recipe</p>
         </div>
         <div class="amountField">
-            <p class="ingredientsTitle">Ingredient amount</p>
+            <div class="ingredientsHeader"></div>
+            <p class="iTitle">Ingredient amount</p>
+            <div class="ingredientsHeader devisesHeader"></div>
+            <p class="iTitle dTitle">Devises</p>
         </div>
         <div class="stepByStepField">
+            <div class="stepByStepHeader"></div>
+            <p class="iTitle sbsTitle">Step-by-step instructions</p>
         </div>
     </div>
+    <div class="addRatingField">
 
+    <div class="ratingField">
+    </div>
+        <div class="confirmation">
+    </div>
+    </div>
 </main>
 
 
