--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -123,6 +123,7 @@
     <div class="ratingField">
     </div>
         <div class="confirmation">
+            <img th:src="@{images/tick.svg}" src="../../static/images/tick.svg" alt = "quill" class = "tick">
     </div>
     </div>
 </main>
