--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -21,18 +21,18 @@
 
     <div class="heart-container">
         <div class="heart"
-                onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
-                onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')">
-            <img id="heart-img" th:src="@{images/heart.svg}" src="../../static/images/heart.svg" alt="heart" class="heart">
+                onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')"
+                onmouseout="restoreImage('heart-img', '../../images/heart.svg')">
+            <img id="heart-img" th:src="@{images/heart.svg}" src="../../images/heart.svg" alt="heart" class="heart">
         </div>
     </div>
 
     <div class="user-container">
         <div class="user"
-                onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
-                onmouseout="restoreImage('user-img', '../../static/images/user.svg')">
+                onmouseover="changeImage('user-img', '../../images/user-hover.svg')"
+                onmouseout="restoreImage('user-img', '../../images/user.svg')">
 
-            <img id="user-img" th:src="@{images/user.svg}" src="../../static/images/user.svg" alt="user" class="user">
+            <img id="user-img" th:src="@{images/user.svg}" src="../../images/user.svg" alt="user" class="user">
         </div>
     </div>
 
@@ -139,23 +139,23 @@
     <div class="circle-container telegram-container">
         <div
                 class="telegram"
-                onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
-                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
+                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
+                onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
         >
-            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../static/images/telegram.svg" alt="telegram" class="telegram">
+            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../images/telegram.svg" alt="telegram" class="telegram">
         </div>
     </div>
 
     <div class="circle-container instagram-container">
         <div
                 class="instagram"
-                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
-                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
+                onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
+                onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
         >
-            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../static/images/inst.svg" alt="instagram" class="instagram">
+            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../images/inst.svg" alt="instagram" class="instagram">
         </div>
     </div>
 </footer>
-<script th:href="@{js/scripts.js}" src="../../static/js/scripts.js"></script>
+<script th:href="@{js/scripts.js}" src="../../js/scripts.js"></script>
 </body>
 </html>
