--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -16,7 +16,6 @@
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
-        <a class="home" href="main.html" th:href="@{/}" > </a>
         <div class="heart-container">
             <div class="heart"
                  onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
@@ -35,7 +34,9 @@
         </div>
 
         <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
-        <a href = "main.html" th:href="@{images/home.svg}"></a>
+        <a class="home" href="main.html" th:href="@{/}" > </a>
+        <!--        <a href = "main.html" th:href="@{images/home.svg}"></a>-->
+
 
     </div>
 </header>
